trustfall_core/src/resources/test_data/parse_errors/invalid_filter_op.parse-error.ron
Err(UnsupportedFilterOperator("non_existent", Pos(
  line: 4,
  column: 34,
)))
